[project]
name = "braggard"
version = "0.1.0"
description = "Automated portfolio-stats generator for GitHub developers"
authors = [{ name = "Sean Evans", email = "sean@evans.dev" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
braggard = "braggard.cli:main"
